package Player;

import game.GamePlayer;

import java.util.Random;

public abstract class Player implements GamePlayer {
    private int id;
    private String name;

    public Player(String name) {
        this.name = name;
    }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    @Override
    public String toString() {
        return getName();
    }
}
