package Player;

import game.tictactoe.Position;

public interface TicTacToePlayer {
    Position putMark();
}
