package game;

import java.util.List;

public interface GamePlayersProvider {
    GamePlayer[] getGamePlayers(int size);
}
